# MSComp-Season-IV

./: README.md
Project/: README.md  config.py  eval.py  eval_ssl.py  pyproject.toml  requirements.txt  ssl_config.py  stl10_dataset.py  train.py  train_ssl.py  utils.py
Project/models/: ssl_model.py  vit_model.py
