[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "uysalserkan",email = "serkan.uysal@sahibinden.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "timm (>=1.0.21,<2.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "lightly (>=1.5.22,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "torchvision (>=0.24.0,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
